service-nginx-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
    - host: belajar-cert-managerlocal.online
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: nginx-service
                port: 
                  number: 80
